--- a/config/database.yml
+++ b/config/database.yml
@@ -9,11 +9,11 @@
 #   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 #   timeout: 5000
 
-
 # <<: *default
 # database: db/development.sqlite3
-development:
-  default: &default
+
+# development:
+default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -21,13 +21,17 @@ development:
   password: password # docker-compose.ymlのMYSQL_ROOT_PASSWORD
   host: db # docker-compose.ymlのservice名
 
+development:
+  <<: *default
+  database: dev_mysql
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: test_mysql
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: prod_mysql
